2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.50 released.

        * Using eval around GetTerminalSize so that CPAN
          Testers automated tests won't break


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.49 released.

        * Now using Module::Load::Conditional to load
          Term::ReadKey


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.48 released.

        * Removed Build.PL from build


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.47 released.

        * 'Finally' got the gpg signature going again


2010-08-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.46 released.

        * Implemented 'unattended' mode for use with Net:FullAuto
          and other scripts that run in batch. For 'unattended'
          mode to work, Menu blocks must be configured with
          Default selections.


2010-08-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.45 released.

        * 'Default' items now work for Menus with large
          numbers of choices.

        * 'Default' messaging is better - Users are informed
          when 'Default' selections exist on hidden screens.

        * Press 'q' to quit has been changed to
          Type 'quit' to quit


2010-08-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.44 released.

        * Fixed bug when Selection is set to One

        * Modified to conform to new Net:FullAuto architecture


2010-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.43 released.

        * Added 'Custom' to Net::FullAuto paths


2010-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.42 released.

        * More error handling cleanup for iteraction with
          Net::FullAuto


2010-08-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
